--- a/frontend/edit-post.html
+++ b/frontend/edit-post.html
@@ -7,7 +7,7 @@
   <title>Create / Edit Post — SereneWrite</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
-<body>
+<body class="new-post-theme">
   <header class="navbar">
     <div class="nav-container">
 
