--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,6 +15,7 @@
 
     <nav class="nav-links">
       <a href="index.html">Home</a>
+      <a href="index.html#about" id="navAbout">About Us</a>
       <a href="profile.html" id="navProfile" class="hidden">Profile</a>
       <a href="edit-post.html" id="navNewPost" class="hidden">New Post</a>
       <a href="login.html" id="navAuth">Login</a>
@@ -28,12 +29,17 @@
   <main class="container">
     <section id="hero" class="card hero">
       <h1>SereneWrite</h1>
-      <p class="muted">Write, Share, and Reflect.</p>
+      <p class="muted">What's worth saying.</p>
     </section>
 
     <section id="feed" class="grid"></section>
 
     <div id="pagination" class="pagination"></div>
+
+    <section id="about" class="card panel about-box">
+      <h2>🌿 About Us</h2>
+      <p>SereneWrite is a content-centric blogging platform created to provide a calm, distraction-free space for meaningful expression. Built with a focus on clarity, creativity, and authenticity, SereneWrite allows users to write, publish, and engage with long-form content without the pressure of algorithms, trends, or visual noise. The platform values thoughtful writing over virality, encouraging users to share ideas, reflections, and stories at their own pace. Designed using modern web technologies with a strong emphasis on security and simplicity, SereneWrite aims to empower writers, learners, and thinkers to express what truly matters.</p>
+    </section>
   </main>
 
   <footer class="container footer">
