--- a/frontend/login.html
+++ b/frontend/login.html
@@ -13,6 +13,7 @@
       <div class="nav-logo">✨ SereneWrite</div>
       <nav class="nav-links">
         <a href="index.html" class="nav-btn">Home</a>
+        <a href="index.html#about">About Us</a>
       </nav>
     </div>
   </header>
