--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -13,6 +13,7 @@
       <a href="index.html" class="nav-logo">✨ SereneWrite</a>
       <nav class="nav-links">
         <a href="index.html" class="nav-btn">Home</a>
+        <a href="index.html#about">About Us</a>
       </nav>
     </div>
   </header>
