--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -15,6 +15,7 @@
 
       <nav class="nav-links">
         <a href="index.html">Home</a>
+        <a href="index.html#about">About Us</a>
         <a href="profile.html" id="navProfile" class="hidden">Profile</a>
         <a href="edit-post.html" id="navNewPost" class="hidden">New Post</a>
         <a href="login.html" id="navAuth">Login</a>
