--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,6 +27,14 @@
 
 
   <main class="container">
+    <div class="search-bar" role="search" aria-label="Search posts">
+      <div class="search-input-wrap">
+        <input id="searchInput" type="search" placeholder="Search posts..." aria-label="Search posts" />
+        <button id="searchClear" class="search-clear" aria-label="Clear search" title="Clear search">✕</button>
+      </div>
+      <button id="searchBtn" class="btn-inline">Search</button>
+    </div>
+
     <section id="hero" class="card hero">
       <h1>SereneWrite</h1>
       <p class="muted">What's worth saying.</p>
